--- a/Report/cs590_project_report_zs144.tex
+++ b/Report/cs590_project_report_zs144.tex
@@ -79,13 +79,13 @@
 \keywords{machine learning, double descent, bias-variance tradeoff, P300 BCI}
 
 
-\section{Introduction}
-\subsection{Traditional view of bias and variance tradeoff}
+\section{Introduction} \label{Introduction}
+\subsection{Traditional view of bias and variance tradeoff} \label{traditional}
 \vspace{-1mm}
 Bias and variance tradeoff is one of the most important concepts in classic machine learning. This rule regulates model test risks with different model complexity. To formalize these concepts, suppose we are given $n$ training samples $(\mathbf{x}_i, y_i) \in \mathbb{R}^d \times \mathbb{R}$, where $\mathbf{x}_i$ is the features for one data point and $y_i$ is the corresponding response. Our learning task is to train a model $f_n: \mathbb{R}^d \to \mathbb{R}$ such that we can accurately predict response $y$ given the features $\mathbf{x}$ of any input data points. In practice, the strategy is that we want to maximize the test accuracy while maintaining the training accuracy at a high level. The test accuracy, or relatively the test risk, indicates how well the model can generalize on unseen data, which is not something we can directly control as the training accuracy. We define $l$ as the function to quantify the loss between predictions and the ground truth. Specifically, during training, we use empirical risk minimization (ERM) or some other derivative algorithm to find a proper model $f$ in some function class $\mathcal{H}$ such that it has the minimal empirical risk (also called training loss) $\frac{1}{n}\sum_{i=1}^nl(f(\mathbf{x}_i), y_i)$. Although the training set and testing set are generated on the same distribution $\mathcal{P}$, the concern is that the $f$ derived by ERM may not simultaneously minimize the true risk (also called test risk) $\mathbb{E}[l(\mathbf{x}), y|(\mathbf{x}, y) \sim \mathcal{P}]$. The conventional bias and variance tradeoff believes there are two stages when we look at the change of training risk and test risk: underfitting and overfitting \cite{hastie2009elements}. If the model is too simple (i.e., a small model class $\mathcal{H}$ capacity), all participants in $\mathcal{H}$ tend to underfit the training set, resulting in both a low training risk and a low test risk. On the other hand, if the model is overly complicated (i.e., a big model class $\mathcal{H}$ capacity), then models will overfit the training data and generate badly on new samples, so the test risk is still high this time but the training risk is optimized. Generally, the training risk decreases as the model becomes more complex, whereas the test risk reduces first and then bounces back. Why do we have a U-shaped curve for the change of test risk? This is because it can be decomposed into three parts: an increasing bias, a decreasing variance, and a constant irreducible error in \cite{neville2008bias}. Therefore, between the two stages, there exists a balanced point where the model is neither too simple nor too complicated, leading to the ideal training risk and test risk. Another widespread rule of thumb is that: don't overfit the model to a zero training risk because it will definitely harm its performance during testing.
 
 \vspace{-2mm}
-\subsection{Modern viewpoint: Double Descent}
+\subsection{Modern viewpoint: Double Descent} \label{modern}
 \vspace{-1mm}
 However, modern practice has started to extend the previous view on the choice of models. Practitioners find that modern machine learning techniques, such as deep neural networks, can still perform relatively well on testing data even if they have already achieved low or even zero training risk. For these complicated neural networks, the number of weights (parameters) is usually much more than the number of samples so that the model can easily reach zero training risk. We name such phenomena of those heavily overparameterized models as "interpolation", which was first officially proposed by \cite{belkin2019reconciling}. This sparked the beginning of a wave of research in this area, and more interesting findings were revealed. \cite{nakkiran2019more} turns the attention to the performance of the fixed model size with different sample size and derive a similar conclusion. In \cite{nakkiran2021deep}, they further explore more different training settings and experiment with the most cutting-edge deep neural networks such as the transformer, which overall provides an in-depth and surrounding summarization of the double descent. \cite{zhang2021understanding} suggested that deep neural networks are competent even for classification tasks with data generated completely randomly. Although our focus is more on the application side, there are still many theoretical works on this topic worthy to be referred to. Works that analyze the double descent in simple settings (e.g., linear regression, random Fourier features) include: \cite{Bartlett_Long_Lugosi_Tsigler_2019}, \cite{Muthukumar_Vodrahalli_Subramanian_Sahai_2019}, \cite{Mitra_2019}, \cite{Derezinski_Liang_Mahoney_2019}, \cite{Liang_Rakhlin_2020}, \cite{Mei_Montanari_2022}. For theoretical analysis on double descent in neural networks, the related works we recommended include: \cite{d2020double} and \cite{baldassi2021unveiling}.\\
 
@@ -96,7 +96,7 @@ Now, it's time to introduce the main character in the long line of papers we bre
 Double descent refers to the behavior of the test risk curve when it enters the interpolating regime. Empirical evidence of many model architectures shows that, if the model becomes sufficiently over-parameterized that it starts to interpolate the training data, the U-shaped test risk curve will first surge to the peak at some point called interpolating threshold, and then immediately drop back to a comparatively low level as we keep increasing the model complexity. In other words, a second descent appears after the previous U-shaped curve. At this point, much theoretical analysis has proved that the double descent is not a coincidence, but rather it holds under many different assumptions and learning settings. The mathematical derivations to obtain the expression of loss and variance could last for several pages (such as \cite{hastie2022surprises}), so we decide to skip this here in our work as our focus is on empirical analysis, but the key reason for a second descent is that the bias and variance are different in the over-parameterize regime, and their sum (roughly the test risk) is decreasing as the model complexity increases.
 
 \vspace{-2mm}
-\subsection{Our work}
+\subsection{Our work} \label{our}
 \vspace{-1mm}
 Due to the limited amount of time and computation resources, it's impossible for us to explore the double descent in the deep nerual network setting. Therefore, we choose to use simple linear regression where double descent also holds. Note that there is a big difference in the problem formalization in the context of linear regression. In deep neural networks, we can simply make the model more complex by deepening and broadening the networks to investigate the change of performance while the amount of data is fixed. However, we can't do this in linear regression because the input dimension equals to the number of model parameters. In this case, adding more parameters will also increase the sample size, leading to an increment of available information to the model. This violates the requirement of variable controls. As an alternative method, we can instead fix the model size ($d$) while changing the number of samples ($n$). The result should be same as long as the ratio $n/d$ is changed, so either tuning $d$ or $n$ shouldn't be a problem.\\
 
@@ -105,7 +105,7 @@ The organization of this paper can be listed as follows: In Section \ref{Theoret
 
 
 \section{Theoretical Analysis} \label{Theoretical}
-\subsection{Problem Setup}
+\subsection{Problem Setup} \label{problem}
 Recall that the pattern we are trying to learn is $f: \mathbb{R}^d \to \mathbb{R}$. We define the features as $\mathbf{x}$, and the response as $y$. The training set and testing set are all both generated from the same distribution $\mathcal{P}$ where the covariates of features $\mathbf{x}$ is isotropic, i.e., $\mathbf{x} \sim \mathcal{N}(0, \mathbf{I}_d)$, where $\mathbf{I}_d$ is the identity matrix of dimension $d$. The true model is defined as:
 \begin{equation}
 	y = \mathbf{x}^\intercal \beta + \eta, \ \text{where} \ \eta \in \mathcal{N}(0, \sigma^2)
@@ -197,11 +197,23 @@ Now let's turn to analyze the results of experiment 2 shown in Figure \ref{fig:2
 
 \section{Discussion and Conclusion} \label{Conclusion}
 \subsection{Thoughts on applying double descent on P300 spellers development}
+My research concentration is on electroencephalogram (EEG) signal processing, specifically, a type of brain-computer interface (BCI) called the P300 speller. At the beginning, I was thinking to apply the findings of the double descent to the development of P300 spellers as the core task is just to train a classifier. With double descent, we can avoid choosing the bad models and bad sample sizes which leads to diverging test risks. More importantly, we hope it can direct us to find a modern solution to the development by introducing huge models and big data.\\
 
+\vspace{-5mm}
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.6\linewidth]{p300_speller.png}
+	\caption{The visualization of a P300 speller (user intereacts with the keyboard on screen while the EEG headset reads the signals and sends it to the computer to decide the desired character by the core classification algorithm)}
+	\label{fig:3}
+\end{figure}
+
+\vspace{-3mm}
+After a thorough investigation, many possible ideas are ruled out. Currently, there are two types of algorithms mainly used for the classifier in the P300 speller: one is stepwise linear discriminant analysis (SWLDA) which is first systematically studied by \cite{krusienski2006comparison}. Another type is deep-learning-based models, represented by EEGNet introduced in \cite{lawhern2018eegnet}. As we confessed before, we are not able to explore those deep learning methods due to the limited computing resources, so we leave it for future work. For SWLDA, it is within our ability, but sadly, we don't think there is any possibility that we can utilize the information provided by the pattern of double descent to improve the performance of SWLDA-based P300 spellers. Firstly, the model dimension is fixed since the EEG signal reading is conducted by the standardized equipment, which collects the data from a fixed set of areas on the object's brain surface using 32 electrodes. Thus, it's impossible to further increase the model complexity in SWLDA. Secondly, the training sample size ($n$) is always much more than the model dimension ($d$) due to the nature of the experiment where we collect the user's data to build the user-specific classifier (the procedure is visualized in Figure \ref{fig:3}). Moreover, the noise in EEG signals is very strong and irregular, so it is a must to collect enough amount of data to secure classification accuracy. Therefore, we would never fall into the over-parameterized regime when using SWLDA. Lastly, we don't think the training data satisfies the assumption we specified in Section \ref{problem}. The features in the SWLDA models are signals collected by different electrodes at various timestamps. These features are definitely NOT isotropic since signals have temporal and spatial correlations. This makes the result not guaranteed by any existing theory. Considering the test accuracy of SWLDA is already high enough (usually $80\% \sim 90\%$) to be considered the state-of-the-art method in the community of P300 spellers, we should turn our attention to deep learning methods, and perhaps there is some interesting empirical evidence waiting for us as we try deep neural networks with different sizes and structures.
 
 \subsection{Conclusion}	
+In this paper, we manage to see and understand the phenomenon of double descent in the case of linear regression, where we fix the model dimension but vary the sample size. The simulation results perfectly match the theory, and we are astonished by the fact that more data is not always better as the test risk explodes around the interpolation threshold ($n \approx d$). Fortunately, this can be effortlessly eliminated by just adding an $\mathcal{L}_2$ regularization term. However, the problem still exists in many modern machine learning techniques (such as training a deep neural network with SGD), and unlike linear regression, a robust solution to avoiding this pathology has not yet been found. Finally, although we try to find a joint where we can combine double descent and P300 spellers (SWLDA-based), we are unfortunately not able to find one due to several reasons either in the nature of the experiment design or the EEG data. However, such exploration is beneficial because it helps us to enhance the understanding of the double descent in detail (such as its pre-assumption). After all, we are still curious about the possibility of applying double descent on the deep-learning-based P300 spellers, and we believe what we learned here has built a concrete base for future work.
 
-
+\newpage
 \bibliographystyle{unsrtnat}
-\bibliography{references}
+{\small \bibliography{references}}
 \end{document}
