--- a/Report/references.bib
+++ b/Report/references.bib
@@ -99,3 +99,36 @@
 	publisher={NIH Public Access}
 }
 
+@article{krusienski2006comparison,
+	title={A comparison of classification techniques for the P300 Speller},
+	author={Krusienski, Dean J and Sellers, Eric W and Cabestaing, Fran{\c{c}}ois and Bayoudh, Sabri and McFarland, Dennis J and Vaughan, Theresa M and Wolpaw, Jonathan R},
+	journal={Journal of neural engineering},
+	volume={3},
+	number={4},
+	pages={299},
+	year={2006},
+	publisher={IOP Publishing}
+}
+
+@article{lawhern2018eegnet,
+	title={EEGNet: a compact convolutional neural network for EEG-based brain--computer interfaces},
+	author={Lawhern, Vernon J and Solon, Amelia J and Waytowich, Nicholas R and Gordon, Stephen M and Hung, Chou P and Lance, Brent J},
+	journal={Journal of neural engineering},
+	volume={15},
+	number={5},
+	pages={056013},
+	year={2018},
+	publisher={iOP Publishing}
+}
+
+@article{craik2019deep,
+	title={Deep learning for electroencephalogram (EEG) classification tasks: a review},
+	author={Craik, Alexander and He, Yongtian and Contreras-Vidal, Jose L},
+	journal={Journal of neural engineering},
+	volume={16},
+	number={3},
+	pages={031001},
+	year={2019},
+	publisher={IOP Publishing}
+}
+
